[package]
name = "solana-vamp"
version = "0.1.0"
edition = "2021"
description = "solana-vamp is a utility program that can be used to interact with the Solana Vote Account Manager program"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "=1.15.2"
solana-sdk = "=1.15.2"
zerocopy = "=0.3.0"
